Changes for 1.8.1

 - [ZBX-1564] fixed processing of performance counters which are represented as number alternatives (Dmitry)
 - [ZBX-479] fixed compilation of Zabbix agent under Mac OS/X (Sasha)
 - [ZBX-1385] proxy list in host configuration form is now sorted (Vedmak)
 - [ZBX-1560] fixed typo in application API class call (Vedmak)
 - [ZBX-1286] Zabbix handles some specified types of errors instead of Windows system, no dialogue boxes pop up (Dmitry)
 - [ZBX-1420] fixed warnings in Dashboard and on script execution if Zabbix server is down (Alexei)
 - [ZBX-1584] fixed importing/exporting of IPMI settings (Vedmak)
 - [ZBX-1554] fixed errors when saving triggers using "Create log trigger" (Vedmak)
 - [ZBX-1530] fixed showing graph from wrong host, when simple graph with dynamic option is clicked on screen (Vedmak)
 - [ZBX-1545] fixed showing templated graphs in graph selection combobox (Vedmak)
 - [ZBX-1465] fixed adding hostgroup elements on map (Aly)
 - [ZBX-1528] fixed map permissions (Aly)
 - [ZBX-1569] fix incorrect state reference in map connector definition (Richlv)
 - [ZBX-1568] make 'Parent service' string translatable; patch by Kodai (Richlv)
 - [ZBX-1457] hosts in export file is now sorted by hostname (Vedmak)
 - [ZBX-1462] fixed "Add host" operation for "Discovery" module for trying to add a host name which is already used (Dmitry)
 - [ZBX-1547] fixed SQL error while executing discovery action 'remove host' (Sasha)
 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
 - [ZBX-1470] fixed importing triggers with dependencies (Vedmak)
 - [ZBX-1440] fixed error when adding global macro (Vedmak)
 - [ZBX-1435] fixed exporting triggers with '&' (Vedmak)
 - [ZBX-1174] fixed sql in "Add host" operation in "Discovery" module (Dmitry)
 - [ZBX-1431] fixed parameters for user.get api method (Vedmak)
 - [ZBX-1467] fixed graph copying (Vedmak)
 - [ZBX-1502] fixed full clone of hosts (Vedmak)