@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1585] fixed editing time in calendar popup in ie6/7 (Vedmak)
  - [ZBX-1564] fixed processing of performance counters which are represented as number alternatives (Dmitry)
  - [ZBX-479] fixed compilation of Zabbix agent under Mac OS/X (Sasha)
  - [ZBX-1385] proxy list in host configuration form is now sorted (Vedmak)
